# hueHome

./: .gitignore  CMakeLists.txt  hue.json
configs/: schedule.json
include/: control.cpp  control.h  schedule.h
src/: control.cpp  hueHome.cpp  schedule.cpp
